--- a/lms/templates/student_account/finish_auth.html
+++ b/lms/templates/student_account/finish_auth.html
@@ -24,6 +24,7 @@
                 function ($, _, Backbone, FinishAuthView) {
                     return function() {
                         var view = new FinishAuthView({});
+                        view.render();
                     };
                 }
             );
